fix: widtth of loading component on small devices

--- a/src/components/Loading/styles.scss
+++ b/src/components/Loading/styles.scss
@@ -7,4 +7,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  > section{
+    max-width: 300px;
+  }
 }
